--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ system.admin.contact.email=admin@hotelreservation.com
 # MySQL database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_reservation?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=StrongPassword123!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection pool settings
@@ -208,7 +208,15 @@ review.rating.max=5
 # ======================
 # LOGGING CONFIGURATION
 # ======================
-# Logging levels
+# Logging Levels (ordered from least to most verbose):
+# 1. OFF     - No logging
+# 2. FATAL   - Severe errors that cause premature termination
+# 3. ERROR   - Runtime errors/exceptional conditions
+# 4. WARN    - Undesirable but not wrong situations
+# 5. INFO    - Important runtime events (startup/shutdown)
+# 6. DEBUG   - Detailed flow information
+# 7. TRACE   - Most detailed information (method entry/exit)
+
 logging.level.root=INFO
 # Application-specific package (update with your actual package structure)
 logging.level.com.hotelreservation=DEBUG
