--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ system.admin.contact.email=admin@hotelreservation.com
 # MySQL database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_reservation?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection pool settings
@@ -233,8 +233,8 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) [%thread] %
 
 # File logging configuration
 logging.file.name=logs/hotel-reservation.log
-logging.file.max-size=10MB
-logging.file.max-history=7
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=7
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # ======================
