Add security with jwt: service, dto, filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -98,8 +98,9 @@ spring.web.resources.chain.compressed=true
 # FILE UPLOAD CONFIG
 # ======================
 # For hotel/room images and documents
-file.upload-dir=src/main/resources/static/uploads/images
-file.allowed-types=image/jpeg,image/png,image/gif
+hotelphoto.upload.dir=uploads/hotelphotos
+roomphoto.upload.dir=uploads/roomphotos
+#file.allowed-types=image/jpeg,image/png,image/gif
 # Maximum file size for upload (10MB)
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
@@ -217,25 +218,25 @@ review.rating.max=5
 # 6. DEBUG   - Detailed flow information
 # 7. TRACE   - Most detailed information (method entry/exit)
 
-logging.level.root=INFO
+logging.level.root=WARN
 # Application-specific package (update with your actual package structure)
 logging.level.com.hotelreservation=DEBUG
 # Framework logging
 logging.level.org.springframework=WARN
-logging.level.org.springframework.web=INFO
-logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=WARN
 logging.level.org.hibernate=WARN
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
 # Console output formatting
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) [%thread] %cyan(%logger{15}) - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %clr(%5p) [%thread] %cyan(%logger{15}) - %msg%n
 
 # File logging configuration
-logging.file.name=logs/hotel-reservation.log
-logging.logback.rollingpolicy.max-file-size=10MB
-logging.logback.rollingpolicy.max-history=7
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.file.name=logs/hotel-reservation.log
+#logging.logback.rollingpolicy.max-file-size=10MB
+#logging.logback.rollingpolicy.max-history=7
+#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # ======================
 # DEV TOOLS & PROFILES
