Setting the environment with entities, services and repos. Some modifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -232,10 +232,10 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) [%thread] %cyan(%logger{15}) - %msg%n
 
 # File logging configuration
-logging.file.name=logs/hotel-reservation.log
-logging.file.max-size=10MB
-logging.file.max-history=7
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.file.name=logs/hotel-reservation.log
+#logging.file.max-size=10MB
+#logging.file.max-history=7
+#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # ======================
 # DEV TOOLS & PROFILES
