--- a/pom.xml
+++ b/pom.xml
@@ -185,10 +185,10 @@
 		</dependency>
 
 		<!-- Email support -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-mail</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<!-- Excel/PDF export support -->
 		<dependency>
