feat(Booking Management): Enhance booking service with refund handling and email notifications. Add refund confirmation email functionality, update booking entity to store charge ID and refund ID, and implement refund processing logic in the booking service. Update FAQ entity to use generated IDs instead of composite keys.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ application.properties
 
 ### Uploaded photos ###
 uploads/
+
+### Personal files to be ignored like secrets, machine dependent configs ###
+ignoretoo/
