--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,6 +121,7 @@ spring.mail.properties.mail.smtp.timeout=5000
 # Email templates location
 email.template.confirmation=email/booking-confirmation
 email.template.cancellation=email/booking-cancellation
+email.template.refund=email/refund-confirmation
 # Enable/disable email sending (for testing)
 email.sending.enabled=true
 
