--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ system.admin.contact.email=admin@hotelreservation.com
 # MySQL database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_reservation?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection pool settings
@@ -222,18 +222,18 @@ review.rating.max=5
 # 6. DEBUG   - Detailed flow information
 # 7. TRACE   - Most detailed information (method entry/exit)
 
-logging.level.root=WARN
+logging.level.root=INFO
 # Application-specific package (update with your actual package structure)
 logging.level.com.hotelreservation=DEBUG
 logging.level.cm.sji.hotel_reservation=DEBUG
 logging.level.cm.sji.hotel_reservation.controllers.api.BookingsAPI=DEBUG
 # Framework logging
-logging.level.org.springframework=WARN
+#logging.level.org.springframework=INFO
 logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=WARN
+logging.level.org.springframework.security=INFO
 logging.level.org.hibernate=WARN
 logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
 # Console output formatting
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %clr(%5p) [%thread] %cyan(%logger{15}) - %msg%n
