--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 # ======================
 # Basic application settings
 spring.application.name=hotel-reservation
-server.port=8080
+server.port=8081
 # Application context path (uncomment if needed)
 #server.servlet.context-path=/reservation
 
@@ -27,7 +27,7 @@ system.admin.contact.email=admin@hotelreservation.com
 # MySQL database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_reservation?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=87654321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection pool settings
@@ -48,7 +48,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.open-in-view=false
 # Initialize database with data.sql (set to 'always' to run every time)
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.platform=mysql
 
 # ======================
@@ -222,16 +222,16 @@ review.rating.max=5
 # 6. DEBUG   - Detailed flow information
 # 7. TRACE   - Most detailed information (method entry/exit)
 
-logging.level.root=WARN
+logging.level.root=INFO
 # Application-specific package (update with your actual package structure)
 logging.level.com.hotelreservation=DEBUG
 logging.level.cm.sji.hotel_reservation=DEBUG
 logging.level.cm.sji.hotel_reservation.controllers.api.BookingsAPI=DEBUG
 # Framework logging
-logging.level.org.springframework=WARN
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=WARN
-logging.level.org.hibernate=WARN
+logging.level.org.hibernate=INFO
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
