--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -113,8 +113,8 @@ spring.servlet.multipart.file-size-threshold=2KB
 # Email configuration for booking confirmations & notifications
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=notifications@hotelreservation.com
-spring.mail.password=YourAppPassword
+spring.mail.username=foningxavier@gmail.com
+spring.mail.password=fzlr zffs vjpb emrg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.timeout=5000
