--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 # ======================
 # Basic application settings
 spring.application.name=hotel-reservation
-server.port=8080
+server.port=8081
 # Application context path (uncomment if needed)
 #server.servlet.context-path=/reservation
 
@@ -27,7 +27,7 @@ system.admin.contact.email=admin@hotelreservation.com
 # MySQL database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_reservation?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=87654321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection pool settings
@@ -35,6 +35,8 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
+
+
 
 # JPA/Hibernate settings
 # 'update' is safe for development: creates/updates tables automatically
